대화상대 추가, 채팅룸 생성 시 메시지 생성